# candy-backend

./: .coverage  .flake8  .gitignore  Dockerfile  ci.yml.bkp  coverage.xml  main.py  pyproject.toml  test-results.xml
.github/workflows/: bkp.ci.yml  ci.yml  docker-image.yml  main.yml  stage-1-fast-checks.yml  stage-2-security.yml  stage-3-tests.yml  stage-4-build.yml  stage-5-iac.yml  stage-6-observability.yml  stage-7-performance.yml  stage-8-deploy-staging copy.yml  stage-8-deploy-staging.yml  stage-9-deploy-production copy.yml  stage-9-deploy-production.yml
src/: main.py
src/candyapp_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_main.py
