[project]
name = "candyapp-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.42.63",
    "flask>=3.1.3",
    "flask-cors>=5.0.0",
    "gunicorn>=23.0.0",
]

[tool.flake8]
extend-ignore = ["D100", "D103", "D104"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]
